# seichi-timed-stats-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  renovate.json
.github/workflows/: actionlint.yaml  build-and-release-application.yaml  ci.yaml  rewrite-kubernetes-image-tag.yaml
app/: Cargo.toml
kubernetes/: kustomization.yaml  reader.yaml  telegraf.yaml  translator.yaml
kubernetes/telegraf-config/: telegraf.conf
seichi-timed-stats-reader/: Cargo.toml  build.rs
server/: Cargo.toml
server/app/: .gitignore  Cargo.toml
servers/reader/: Cargo.toml  Dockerfile  buf.gen.yaml
servers/translator/: Cargo.toml  Dockerfile  buf.gen.yaml  build.rs
servers/translator/src/: main.rs
timed-stats-reader/: .gitignore
timed-stats-translator/: buf.gen.yaml
