[package]
name = "seichi-timed-stats-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
chrono = "0.4.19"
envy = "0.4.2"
log = "0.4.17"
pbjson-types = "0.3.1"
prost = "0.10.3"
serde = "1.0.137"
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }
tonic = { version = "0.7.2", features = ["compression"] }
