[package]
name = "seichi-timed-stats-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.59"
async-trait = "0.1.57"
chrono = "0.4.19"
envy = "0.4.2"
log = "0.4.17"
pbjson-types = "0.3.2"
prost = "0.11.0"
serde = "1.0.141"
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
tonic = { version = "0.7.2", features = ["compression"] }
