[package]
name = "seichi-timed-stats-translator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
async-trait = "0.1.61"
pbjson-types = "0.5.1"
prost = "0.11.6"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8.3", features = ["gzip"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
anyhow = "1.0.66"
envy = "0.4.2"
serde = "1.0.150"
tower-http = { version = "0.3.5", features = ["trace"] }
indexmap = "1.9.2"
