[package]
name = "seichi-timed-stats-translator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
async-trait = "0.1.80"
pbjson-types = "0.5.1"
prost = "0.11.8"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14.0", features = ["gzip"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.39"
anyhow = "1.0.82"
envy = "0.4.2"
serde = "1.0.198"
tower-http = { version = "0.4.4", features = ["trace"] }
indexmap = "1.9.3"
